--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					
 						</section>
 						<section>
-							<a href="#" class="image"><img src="Untitled 12.jpeg" alt="Pegah Zargarian" data-position="top center" /></a>
+							<a href="#" class="image"><img src="./Untitled 12.jpeg" alt="Pegah Zargarian" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Feugiat consequat</h2>
