--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">About</a></li>
+							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -50,8 +50,11 @@
 							<a href="#" class="image"><img src="./Untitled 12.jpeg" alt="Pegah Zargarian" data-position="top center" width="500" height="400" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>About</h2>
+									<p>I’m a Master’s Student in Data Science, with a keen interest in AWS architecture, AI, and Machine Learning.
+									   I enjoy transforming raw data into insights and creating secure, scalable cloud solutions. I love working 
+									   on projects and collaborating within diverse teams. Driven by curiosity, I’m committed to using technology 
+									   for innovative solutions. Let’s connect and explore how data can make a difference!</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
