--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					
 						</section>
 						<section>
-							<a href="#" class="image"><img src="./Untitled 16.jpeg" alt="Pegah Zargarian" data-position="top center" width="800" height="1200" /></a>
+							<a href="#" class="image"><img src="./Untitled 16.jpeg" alt="Pegah Zargarian" data-position="top center" width="400" height="600" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>About</h2>
@@ -56,8 +56,8 @@
 									   on projects and collaborating within diverse teams. Driven by curiosity, I’m committed to using technology 
 									   for innovative solutions. Let’s connect and explore how data can make a difference!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+										<li><a href="./PZ-Resume.pdf" class="button">Resume</a></li>
+									</ul> 
 								</div>
 							</div>
 						</section>
