--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									   on projects and collaborating within diverse teams. Driven by curiosity, I’m committed to using technology 
 									   for innovative solutions. Let’s connect and explore how data can make a difference!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Resume</a></li>
+										<li><a href="./generic.html" class="button">Resume</a></li>
 									</ul> 
 								</div>
 							</div>
