--- a/generic.html
+++ b/generic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ume<!DOCTYPE HTML>
 <!--
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
@@ -32,9 +32,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">Resume</h1>
        							<div class="pdf-container">
-          						<iframe src="./PZ-resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe>
+          						<iframe src="PZ-resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe>
        							</div>
 							<p>.</p>
 							<p>.</p>
