--- a/generic.html
+++ b/generic.html
@@ -33,9 +33,8 @@ ume<!DOCTYPE HTML>
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Resume</h1>
-       							<div class="pdf-container">
-          						<iframe src="PZ-resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe>
-       							</div>
+							<span class="pdf-container"><iframe src="./PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
+       							
 							<p>.</p>
 							<p>.</p>
 						</div>
