--- a/generic.html
+++ b/generic.html
@@ -33,7 +33,7 @@ ume<!DOCTYPE HTML>
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Resume</h1>
-							<span class="pdf-container"><iframe src="./PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
+							<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
        							
 							<p>.</p>
 							<p>.</p>
