--- a/generic.html
+++ b/generic.html
@@ -32,7 +32,7 @@ ume<!DOCTYPE HTML>
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="title">Resume</h1>
+							<h2 class="major">Resume</h2>
 							<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:700px;"></iframe></span>
        							
 						</div>
