--- a/generic.html
+++ b/generic.html
@@ -1,4 +1,4 @@
-ume<!DOCTYPE HTML>
+coume<!DOCTYPE HTML>
 <!--
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
@@ -16,7 +16,7 @@ ume<!DOCTYPE HTML>
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Welcome!</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
