--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="pgazarg@gmail.com" class="button submit">Send Message</a></li>
+											<li><a href=""mailto:pgazarg@gmail.com" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
