--- a/generic.html
+++ b/generic.html
@@ -32,8 +32,8 @@ coume<!DOCTYPE HTML>
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h2 class="major">Resume</h2>
-								<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
+							<h1 class="major">Resume!</h1>
+							<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
        							
 						</div>
 					</section>
