--- a/generic.html
+++ b/generic.html
@@ -11,6 +11,17 @@ coume<!DOCTYPE HTML>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			.pdf-container {
+		            display: flex;
+		            justify-content: flex-start;
+		            align-items: center;
+		            width: 100%;
+			        }
+		        .pdf-container iframe {
+		            max-width: 100%;
+		        }
+	    	</style>
 	</head>
 	<body class="is-preload">
 
@@ -32,7 +43,7 @@ coume<!DOCTYPE HTML>
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Resume!</h1>
+							<h2 class="major">Resume!</h2>
 							<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
        							
 						</div>
