--- a/generic.html
+++ b/generic.html
@@ -32,7 +32,7 @@ coume<!DOCTYPE HTML>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html" class="active">Generic</a></li>
-<!-- 		
+	<!-- 		
 					</ul>
 				</nav>
 			</header>
@@ -43,7 +43,7 @@ coume<!DOCTYPE HTML>
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h2 class="major">Resume!</h2>
+							<h2 class="major">Resume</h2>
 							<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
        							
 						</div>
