--- a/generic.html
+++ b/generic.html
@@ -32,7 +32,7 @@ coume<!DOCTYPE HTML>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html" class="active">Generic</a></li>
-	<!-- 		
+		<!-- 		
 					</ul>
 				</nav>
 			</header>
@@ -41,12 +41,13 @@ coume<!DOCTYPE HTML>
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h2 class="major">Resume</h2>
-							<span class="pdf-container"><iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe></span>
-       							
-						</div>
+					 <section id="main" class="wrapper">
+					        <div class="inner">
+					            <h2 class="major">Resume</h2>
+					            <div class="pdf-container">
+					                <iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe>
+					            </div>
+					        </div>
 					</section>
 
 			</div>
