--- a/generic.html
+++ b/generic.html
@@ -13,10 +13,10 @@ coume<!DOCTYPE HTML>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
 			.pdf-container {
-		            display: flex;
-		            justify-content: flex-start;
-		            align-items: center;
-		            width: 100%;
+		             display: flex;
+            		     justify-content: flex-start;
+            		     align-items: center;
+            		     width: 100%;
 			        }
 		        .pdf-container iframe {
 		            max-width: 100%;
@@ -45,7 +45,7 @@ coume<!DOCTYPE HTML>
 					        <div class="inner">
 					            <h2 class="major">Resume</h2>
 					            <div class="pdf-container">
-					                <iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe>
+					                <iframe src="PZ-Resume.pdf" frameborder="0"></iframe>
 					            </div>
 					        </div>
 					</section>
