--- a/generic.html
+++ b/generic.html
@@ -43,9 +43,9 @@ coume<!DOCTYPE HTML>
 				<!-- Main -->
 					 <section id="main" class="wrapper">
 					        <div class="inner">
-					            <h2 class="major">Resume</h2>
+					            <h2 class="major">Resume!</h2>
 					            <div class="pdf-container">
-					                <iframe src="PZ-Resume.pdf" frameborder="0"></iframe>
+					                <iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:500px;"></iframe>
 					            </div>
 					        </div>
 					</section>
