--- a/generic.html
+++ b/generic.html
@@ -45,7 +45,7 @@ coume<!DOCTYPE HTML>
 					        <div class="inner">
 					            <h2 class="major">Resume</h2>
 					            <div class="pdf-container">
-					                <iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:700px; justify-content: flex-start;"></iframe>
+					                <iframe src="PZ-Resume.pdf" frameborder="0" style="width:100%; height:700px; justify-content: flex-start;align-items: center;"></iframe>
 					            </div>
 					        </div>
 					</section>
