--- a/generic.html
+++ b/generic.html
@@ -12,6 +12,9 @@ coume<!DOCTYPE HTML>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
+			.inner {
+            			text-align: left;
+       			 }
 			.pdf-container {
 		             display: flex;
             		     justify-content: flex-start;
