--- a/index.html
+++ b/index.html
@@ -113,27 +113,28 @@
 					        <h2>Get in touch</h2>
 					        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 					        <div class="split style1">
-					            <section>
-							    <form method="post" action="mailto:pgazarg@gmail.com" enctype="text/plain">
+					           <section>
+							    <form method="POST" action="https://formspree.io/f/xnnadngl">
 							        <div class="fields">
 							            <div class="field half">
 							                <label for="name">Name</label>
-							                <input type="text" name="name" id="name" />
+							                <input type="text" name="name" id="name" required />
 							            </div>
 							            <div class="field half">
 							                <label for="email">Email</label>
-							                <input type="email" name="email" id="email" />
+							                <input type="email" name="email" id="email" required />
 							            </div>
 							            <div class="field">
 							                <label for="message">Message</label>
-							                <textarea name="message" id="message" rows="5"></textarea>
+							                <textarea name="message" id="message" rows="5" required></textarea>
 							            </div>
 							        </div>
 							        <ul class="actions">
 							            <li><button type="submit" class="button submit">Send Message</button></li>
 							        </ul>
 							    </form>
-						    </section>
+						</section>
+
 
 					            <section>
 					                <ul class="contact">
