--- a/generic.html
+++ b/generic.html
@@ -26,6 +26,15 @@ coume<!DOCTYPE HTML>
 		        }
 	    	</style>
 	</head>
+	<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGTBDZ3XN2"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-MGTBDZ3XN2');
+	</script>
 	<body class="is-preload">
 
 		<!-- Header -->
