--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<section id="intro" class="wrapper style2 fullscreen fade-up">
 						<div class="inner">
 							<h1>Pegah Zargarian</h1>
+							<h2>Data Scientist</h2>
 							<p>Innovation Begins with a Single Line of Code ...</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
