--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 	</head>
 	<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGTBDZ3XN2"></script>
@@ -49,7 +51,10 @@
 							<p>Innovation Begins with a Single Line of Code ...</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								
+
 							</ul>
+							<i class="fas fa-laptop-code" id="data-icon"></i>
 						</div>
 					</section>
 
