--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	
 	</head>
 	<!-- Google tag (gtag.js) -->
@@ -55,7 +54,7 @@
 						
 						</div>
 						 <div class="icon-container">
-						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon">
+						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon" data-position="top Rigth" width="400" height="600" />>
 						</div>
 					</section>
 
