--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						
 						</div>
 						 <div class="icon-container">
-						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon" data-position="top Rigth" width="400" height="600" />>
+						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon" data-position="Rigth" />
 						</div>
 					</section>
 
