--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 						</div>
 						 <div class="icon-container">
 						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon" data-position="Rigth" />
+						</div>
 							
 					</section>
 
