--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						
 						</div>
 						 <div class="icon-container">
-						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon" data-position="center"  width="600" height="600" />
+						        <img src="./data.png" alt="Data Science Icon" id="rotating-icon"width="400" height="400" />
 						</div>
 							
 					</section>
